--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,12 +28,15 @@ body {
   background: #f84802;
   border-radius: 6px;
 }
+a {
+  text-decoration: none;
+}
 
 h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 6rem;
   color: #ff5501;
-  padding-left: 42%;
+  padding-left: 43%;
 }
 
 h3 {
@@ -52,26 +55,10 @@ button:hover {
   border: 1px solid #ff5501;
 }
 
-.title__form {
-  font-size: 31px;
-  font-family: Akrobat-Regular;
-  letter-spacing: 3px;
-}
-
-.title_principal h1 {
-  font-size: 5rem;
-  text-transform: uppercase;
-  margin-bottom: 0;
-}
-
-.title__form {
-  font-size: 2rem;
-  text-align: center;
-}
-
-fieldset {
-  border: none;
-  margin: 0;
+.linhaHorizonP{
+  width: 100%;
+  border: 1px solid #ff5501;
+  margin-top: 5%;
 }
 
 .what__description {
@@ -85,30 +72,40 @@ fieldset {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10rem 0.5rem;
+  margin-top: 13%;
   margin-right: -62%;
   margin-left: 10%;
 }
 
 .imgTeste {
-  margin-left: 25%;
+  margin-left: 15%;
 }
 
 .imgteste {
-  width: 20%;
+  width:18%;
   border-radius: 50%;
 }
 
-.information {
+.information { 
   padding-top: 1%;
   display: flex;
   justify-content: space-around;
 }
 
+.cabecalho {
+  background-color: #13141e;
+  position: fixed;
+  padding-top: 1%;
+  width: 100%;
+  z-index: 3;
+
+}
+
 .sou {
   font-family: "Montserrat", sans-serif;
-  width: 50%;
+  width: 56%;
   font-size: 7rem;
+  padding-left: 5%;
 }
 
 .cargo {
@@ -119,13 +116,15 @@ fieldset {
 .sobre {
   font-size: 3rem;
   color: #828282;
-  display: flex;
+/*  display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 
 .sobreP {
   padding: 0% 18%;
+  text-align: justify;
+  
 }
 
 .contato {
@@ -152,6 +151,10 @@ fieldset {
   color: #fff9f9;
 }
 
+.projetos {
+  margin-top: 5%;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -171,7 +174,7 @@ fieldset {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  background-image: linear-gradient(#13141e, #13141e);
+  background-image: linear-gradient(#462b15, #13141e);
   transition: all 0.5s;
 }
 
@@ -267,10 +270,62 @@ fieldset {
   color: #ff5501;
 }
 
+.verProjeto {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3rem;
+  color: #fff9f9;
+  padding: 1.2rem 2.7rem;
+  background-image: linear-gradient(
+    90deg,
+    rgba(19,20,30,1) 0.2%,
+    rgba(19,20,30,1)
+  );
+  border-radius: 2rem;
+  transition: 0.3s;
+  margin-top: 6.5vh;
+  margin-left: 30%;
+}
+
+.verProjeto:hover {
+  background-image: linear-gradient(#3f1601, #ff5501);
+}
+
+
+.botaoVer {
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none; 
+  color: #f1f0f8;
+}
+
 .copy {
+  font-family: "Montserrat", sans-serif;
   font-size: 75%;
+  text-align: center;
   padding: 1vh;
   background-color: #24242e;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
+  margin-top: 10%;
+}
+
+.iconsContatos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 7.5rem;
+  justify-content: center;
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icons:hover {
+  transform: scale(110%);
+}
+
+.sobreIcon {
+  font-size: 2rem;
+  color: #828282;
+  margin: 5%;
+
 }
