--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,29 +1,29 @@
-body{
+body {
 	background: #13141e;
 	color: #828282;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-header{	
-	padding:20px;
+header {
+	padding: 20px;
 	display: flex;
 	justify-content: space-around;
 }
 
-h2{
+h2 {
 	text-align: center;
-    font-size: 6rem;
-    color: #ff5501;
+	font-size: 6rem;
+	color: #ff5501;
 	font-weight: 600;
 	padding: 20px;
 }
 
-.branquin{
+.branquin {
 	color: #fff9f9;
 }
 
-.laranjinha{
-	color:#ff5501;
+.laranjinha {
+	color: #ff5501;
 }
 
 .caixa {
@@ -31,28 +31,29 @@ h2{
 	border-bottom: 1px solid #ff5501;
 }
 
-.azulzin{
-	color:aqua;
+.iconRede {
+	color: #ff5501;
 }
 
-.contato{
-    font-size: 2rem;
-    color: #fff9f9;
-    background-image: linear-gradient( 90deg, rgba(255, 85, 1) 0.2%, rgba(246, 250, 0, 0.648) 100% );
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
+.contato {
+	font-size: 2.5rem;
+	color: #13141e;
+	font-weight: 600;
+	background-image: linear-gradient(90deg, rgba(255, 85, 1) 0.2%, rgb(255, 85, 1) 100%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 20px;
 }
 
-.botao{
-    font-size: 20px;
-    color: #fff9f9;
-    background-image: linear-gradient( 90deg, rgba(255, 85, 1) 0.2%, rgba(246, 250, 0, 0.648) 100% );
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
+.botao {
+	font-size: 20px;
+	color: #fff9f9;
+	background-image: linear-gradient(90deg, rgba(255, 85, 1) 0.2%, rgba(246, 250, 0, 0.648) 100%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 20px;
 	padding: 10px;
 	margin: 10px;
 }
@@ -60,4 +61,36 @@ h2{
 
 footer p a {
 	margin: 5px 15px;
+}
+
+
+.linhaHorizon {
+	width: 100%;
+	border: 1px solid #ff5501;
+	margin-bottom: 2%;
+}
+
+.details {
+	display: none;
+	margin-top: 15px;
+}
+
+.details.active {
+	display: block;
+}
+
+.card {
+	background-color: #282930;
+}
+
+.btn-primary {
+	background-color: #ff5501;
+	border: none;
+
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #c2490c;
+    border-color: #c2490c;
 }
